<resources>
    <string name="app_name">COVID METER</string>
    <string name="loading">Please wait!</string>
    <string name="country">Country</string>
    <string name="total_cases">Total Cases:</string>
    <string name="today_cases">Today Cases:</string>
    <string name="today_deaths">Today Deaths:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="recovered">Recovered:</string>
    <string name="active">Active:</string>
    <string name="critical">Critical:</string>
    <string name="totalTests">Total Tests:</string>
    <string name="search">Search Countries</string>
</resources>