<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/elevation_8"
        app:cardElevation="@dimen/elevation_4"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/elevation_2">

            <TextView
                android:id="@+id/country_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:fontFamily="@font/source_sans_pro_bold_italic"
                android:hint="@string/country"
                android:padding="@dimen/elevation_2"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/country_TV">

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/today_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/today_cases"></TextView>

                        <TextView
                            android:id="@+id/today_val_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/yellow"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/todayDeaths_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/today_deaths"></TextView>

                        <TextView
                            android:id="@+id/todayDeaths_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/recovered_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/recovered"></TextView>

                        <TextView
                            android:id="@+id/recovered_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/critical_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/critical"></TextView>

                        <TextView
                            android:id="@+id/critical_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cases_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/total_cases"></TextView>

                        <TextView
                            android:id="@+id/cases_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalDeaths_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/total_deaths"></TextView>

                        <TextView
                            android:id="@+id/totalDeaths_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/red"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"
                            android:textColor="@color/white"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/active_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/active"></TextView>

                        <TextView
                            android:id="@+id/active_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalTests_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_semi_bold"
                            android:padding="@dimen/elevation_2"
                            android:text="@string/totalTests"></TextView>

                        <TextView
                            android:id="@+id/totalTests_value_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/source_sans_pro_regular"
                            android:padding="@dimen/elevation_2"></TextView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>